[package]
name = "tower-defense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.1"
pollster = "0.3.0"
vertix = "0.4.0"
bevy_ecs = "0.11.3"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
